refactor(quality): resolve ~166 SonarQube code smells + 1 BLOCKER (customer_api)
S2387 BLOCKER: rename shadowing 'logger' field to 'log' in JwtAuthenticationFilter. S6204 (~55): Stream.collect(toList()) -> .toList() where result is unmodifiable-safe. S1192 (~45): extract duplicated string literals to constants. S1186 (18): document intentionally-empty JPA/Jackson constructors. S1130 (13): drop never-thrown checked exceptions in tests. S6213 (10): rename 'record' restricted-identifier vars. S1128 (6): remove unused imports. 356 tests green (1 transient DB-connection context-load flake confirmed passing on retry).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>